[package]
name = "one_billion_row_challange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
dashmap = { version = "5.5.3", features = ["rayon"] }
datafusion = "37.1.0"
env_logger = "0.11.3"
log = "0.4.21"
rayon = "1.9.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
